--- a/index.html
+++ b/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College OBE System - Login</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="bg-light">
-    <div class="container">
-        <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
-                <div class="card shadow">
-                    <div class="card-body">
-                        <div class="text-center mb-4">
-                            <!-- Replace with your college logo -->
-                            <div class="college-logo mb-3">
-                                <h2>College Name</h2>
-                                <p>College Logo Placeholder</p>
-                            </div>
-                            <h4 class="card-title">Outcome Based Education System</h4>
-                            <p class="text-muted">Login to your account</p>
-                        </div>
-                        
-                        <form id="loginForm">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" required>
-                                <div class="text-end mt-1">
-                                    <a href="#" class="small text-decoration-none">Forgot password?</a>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>College OBE System - Login</title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="css/style.css">
+        </head>
+        <body class="bg-light">
+            <div class="container">
+                <div class="row justify-content-center mt-5">
+                    <div class="col-md-6">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <div class="text-center mb-4">
+                                    <div class="college-logo mb-3">
+                                        <h2>College Name</h2>
+                                        <p>College Logo Placeholder</p>
+                                    </div>
+                                    <h4 class="card-title">Outcome Based Education System</h4>
+                                    <p class="text-muted">Login to your account</p>
                                 </div>
+                               
+                                <form id="loginForm">
+                                    <div class="mb-3">
+                                        <label for="email" class="form-label">Email address</label>
+                                        <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="password" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="password" required>
+                                        <div class="text-end mt-1">
+                                            <a href="#" class="small text-decoration-none">Forgot password?</a>
+                                        </div>
+                                    </div>
+                                    <div class="d-grid gap-2">
+                                        <button type="submit" class="btn btn-primary">Login</button>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary">Login</button>
-                            </div>
-                        </form>
+                        </div>
+                        <div class="text-center mt-3">
+                            <p class="small text-muted">© 2025 College OBE System</p>
+                        </div>
                     </div>
                 </div>
-                <div class="text-center mt-3">
-                    <p class="small text-muted">© 2025 College OBE System</p>
-                </div>
             </div>
-        </div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="js/app.js"></script>
-</body>
-</html>
+            <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+            <script src="js/firebase-config.js"></script>
+            <script src="js/auth.js"></script>
+            <script src="js/app.js"></script>
+        </body>
+        </html>
